--- a/index.ipynb
+++ b/index.ipynb
@@ -65,9 +65,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'x': 0, 'y': 100},\n",
+       " {'x': 100, 'y': 150},\n",
+       " {'x': 200, 'y': 600},\n",
+       " {'x': 400, 'y': 700}]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_show = {'x': 0, 'y': 100}\n",
     "second_show = {'x': 100, 'y': 150}\n",
@@ -91,9 +105,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def expected_value_for_line(m, b, x_value):\n",
+    "    return m*x_value + b\n",
+    "\n",
+    "def sorted_points(x_values, y_values):\n",
+    "    values = list(zip(x_values, y_values))\n",
+    "    sorted_values = sorted(values, key=lambda value: value[0])\n",
+    "    return sorted_values\n",
+    "\n",
+    "def y_intercept(x_values, y_values, m = None):\n",
+    "    sorted_values = sorted_points(x_values, y_values)\n",
+    "    highest = sorted_values[-1]\n",
+    "    if m == None:\n",
+    "        m = slope(x_values, y_values)\n",
+    "    offset = highest[1] - m*highest[0]\n",
+    "    return offset\n",
+    "\n",
+    "def slope(x_values, y_values):\n",
+    "    sorted_values = sorted_points(x_values, y_values)\n",
+    "    x1 = sorted_values[0][0]\n",
+    "    y1 = sorted_values[0][1]\n",
+    "    x2 = sorted_values[-1][0]\n",
+    "    y2 = sorted_values[-1][1]\n",
+    "    m = (y2 - y1)/(x2 - x1)\n",
+    "    return m\n",
+    "\n",
+    "def build_regression_line(x_values, y_values):\n",
+    "    sorted_values = sorted_points(x_values, y_values)\n",
+    "    highest = sorted_values[-1]\n",
+    "    lowest = sorted_values[0]\n",
+    "    m = slope(x_values, y_values)\n",
+    "    b = y_intercept(x_values, y_values, m)\n",
+    "    return {'m': m, 'b': b}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'m': 1.5, 'b': 100.0}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from linear_equations import build_regression_line\n",
     "x_values = list(map(lambda show: show['x'],shows))\n",
@@ -115,6 +187,141 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import plotly\n",
+    "from plotly.offline import iplot, init_notebook_mode\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "def trace(data, mode = 'markers', name=\"data\"):\n",
+    "    x_values = list(map(lambda point: point['x'],data))\n",
+    "    y_values = list(map(lambda point: point['y'],data))\n",
+    "    return {'x': x_values, 'y': y_values, 'mode': mode, 'name': name}\n",
+    "\n",
+    "def line_function_trace(line_function, x_values, mode = 'lines', name = 'line function'):\n",
+    "    values = line_function_data(line_function, x_values)\n",
+    "    values.update({'mode': mode, 'name': name})\n",
+    "    return values\n",
+    "\n",
+    "def line_function_data(line_function, x_values):\n",
+    "    y_values = list(map(lambda x: line_function(x), x_values))\n",
+    "    return {'x': x_values, 'y': y_values}\n",
+    "\n",
+    "def m_b_data(m, b, x_values):\n",
+    "    y_values = list(map(lambda x: m*x + b, x_values))\n",
+    "    return {'x': x_values, 'y': y_values}\n",
+    "\n",
+    "def m_b_trace(m, b, x_values, mode = 'lines', name = 'line function'):\n",
+    "    values = m_b_data(m, b, x_values)\n",
+    "    values.update({'mode': mode, 'name': name})\n",
+    "    return values\n",
+    "    \n",
+    "def plot(traces, layout = {}):\n",
+    "    if not isinstance(traces, list): raise TypeError('first argument must be a list.  Instead is', traces)\n",
+    "    plotly.offline.iplot({'data': traces, 'layout': layout})\n",
+    "\n",
+    "def build_layout(x_range = None, y_range = None, options = {}):\n",
+    "    layout = {}\n",
+    "    if isinstance(x_range, list): layout.update({'xaxis': {'range': x_range}})\n",
+    "    if isinstance(y_range, list): layout.update({'yaxis': {'range': y_range}})\n",
+    "    layout.update(options)\n",
+    "    return layout\n",
+    "\n",
+    "\n",
+    "def trace_values(x_values, y_values, mode = 'markers', name=\"data\", text = []):\n",
+    "    return {'x': x_values, 'y': y_values, 'mode': mode, 'name': name, 'text': text}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "line function",
+         "type": "scatter",
+         "uid": "7a8c1094-4e57-11e9-b5ea-a138738ea814",
+         "x": [
+          0,
+          100,
+          200,
+          400
+         ],
+         "y": [
+          100,
+          250,
+          400,
+          700
+         ]
+        },
+        {
+         "mode": "markers",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "7a8c1314-4e57-11e9-b5ea-a138738ea814",
+         "x": [
+          0,
+          100,
+          200,
+          400
+         ],
+         "y": [
+          100,
+          150,
+          600,
+          700
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"84bf841f-1ee6-45a6-aac8-8757055ec967\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"84bf841f-1ee6-45a6-aac8-8757055ec967\", [{\"mode\": \"lines\", \"name\": \"line function\", \"x\": [0, 100, 200, 400], \"y\": [100.0, 250.0, 400.0, 700.0], \"type\": \"scatter\", \"uid\": \"7ab39420-4e57-11e9-b5ea-a138738ea814\"}, {\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [0, 100, 200, 400], \"y\": [100, 150, 600, 700], \"type\": \"scatter\", \"uid\": \"7ab395d8-4e57-11e9-b5ea-a138738ea814\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"84bf841f-1ee6-45a6-aac8-8757055ec967\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"84bf841f-1ee6-45a6-aac8-8757055ec967\", [{\"mode\": \"lines\", \"name\": \"line function\", \"x\": [0, 100, 200, 400], \"y\": [100.0, 250.0, 400.0, 700.0], \"type\": \"scatter\", \"uid\": \"7ab39420-4e57-11e9-b5ea-a138738ea814\"}, {\"mode\": \"markers\", \"name\": \"data\", \"text\": [], \"x\": [0, 100, 200, 400], \"y\": [100, 150, 600, 700], \"type\": \"scatter\", \"uid\": \"7ab395d8-4e57-11e9-b5ea-a138738ea814\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "from graph import m_b_trace, plot, trace_values\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
     "init_notebook_mode(connected=True)\n",
@@ -132,11 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sample_regression_formula(x):\n",
+    "def sample_regression_formula(x):  #And this the line translated into a function.\n",
     "    return 1.5(x) + 100"
    ]
   },
@@ -456,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
